Add content describing fonts

--- a/pp-01/index.html
+++ b/pp-01/index.html
@@ -9,8 +9,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link rel="stylesheet" href="screen.css" />
+  <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
+  <title>PT Serif and PT Sans</title>
 </head>
 <body>
-
+  <h1>Why PT Serif and PT Sans work well together</h1>
+  <p>
+    The first and best reason that I chose the both of these to go together is that they are meant to. From the about tab
+    on google fonts. "PT Serif is a transitional serif typeface with humanistic terminals. It is designed for use together
+    with PT Sans, and is harmonized across metrics, proportions, weights and design." They were created by the same guy
+    and compliment each other through rules 3 (Embrace the other) and 4 (Explore the past) from the typeconnection rules.
+  </p>
 </body>
 </html>
